--- a/automotive-locksmith.html
+++ b/automotive-locksmith.html
@@ -801,10 +801,7 @@
           <p class="pt-1">Our techs have experience with:</p>
           <ul>
             <li>
-              Domestic vehicles (<a
-                href="https://www.ford.com/support/?srsltid=AfmBOop_EFLG_I_EakTPxNsx7vDBFeNgfafvg1IItUHe2CAKuD6aE3v3"
-                target="_blank"
-                rel="noopener"
+              Domestic vehicles (<a href="https://www.ford.com/" target="_blank"
                 >Ford</a
               >, Chevy, Dodge, GM)
             </li>
