--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Locksmith Phoenix: 20-30 min response for home, business & car emergencies. 24/7 mobile locksmith service across the Phoenix metro. Call now for fast help!"
     />
-
+    <meta
+      name="google-site-verification"
+      content="_t3zRj0LQePNNLI6dtDkK9osn4ujwInqZvue-T90-PA"
+    />
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
@@ -19,7 +22,7 @@
       content="Locksmith Phoenix: 20-30 min response for home, business & car emergencies. 24/7 mobile locksmith service across the Phoenix metro. Call now for fast help!"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://phoenix24hrlocksmith.com" />
+    <meta property="og:url" content="https://phoenix24hrlocksmith.com/" />
     <meta
       property="og:image"
       content="https://phoenix24hrlocksmith.com/images/locksmith-phoenix-og.png"
@@ -294,9 +297,7 @@
                     <a href="/residential-locksmith">Residential Locksmith</a>
                   </li>
                   <li>
-                    <a href="/commercial-locksmith"
-                      >Commercial Locksmith</a
-                    >
+                    <a href="/commercial-locksmith">Commercial Locksmith</a>
                   </li>
                   <li>
                     <a href="/emergency-locksmith">Emergency Locksmith</a>
@@ -774,10 +775,10 @@
           </div>
           <script>
             function loadMap(placeholder) {
-              var container = placeholder.closest('.map-container');
-              var iframe = container.querySelector('iframe');
+              var container = placeholder.closest(".map-container");
+              var iframe = container.querySelector("iframe");
               iframe.src = iframe.dataset.src;
-              container.classList.add('loaded');
+              container.classList.add("loaded");
             }
           </script>
         </div>
@@ -844,10 +845,9 @@
               <p>
                 Most central Phoenix calls get a technician in 20-30 minutes.
                 East Valley suburbs (Mesa,
-                <a href="/locksmith-chandler">Chandler</a>, Gilbert) run
-                25-40 minutes depending on traffic. When you call, our
-                dispatcher checks the closest available van and gives you a
-                real-time ETA.
+                <a href="/locksmith-chandler">Chandler</a>, Gilbert) run 25-40
+                minutes depending on traffic. When you call, our dispatcher
+                checks the closest available van and gives you a real-time ETA.
               </p>
             </details>
 
