--- a/locksmith-gilbert.html
+++ b/locksmith-gilbert.html
@@ -414,11 +414,7 @@
           <p class="pt-1">
             <strong
               >How fast we arrive depends on where you are in
-              <a
-                href="https://www.gilbertaz.gov/"
-                target="_blank"
-                rel="noopener"
-                >Gilbert</a
+              <a href="https://www.gilbertaz.gov/" target="_blank">Gilbert</a
               >:</strong
             >
           </p>
