--- a/locksmith-mesa.html
+++ b/locksmith-mesa.html
@@ -412,8 +412,7 @@
           <p class="pt-1">
             <strong
               >How fast we arrive depends on where you are in
-              <a href="https://www.mesaaz.gov/" target="_blank" rel="noopener"
-                >Mesa</a
+              <a href="https://www.mesaaz.gov/" target="_blank">Mesa</a
               >:</strong
             >
           </p>
