--- a/locksmith-tempe.html
+++ b/locksmith-tempe.html
@@ -412,7 +412,7 @@
           <p class="pt-1">
             <strong
               >How fast we arrive depends on where you are in
-              <a href="https://www.tempe.gov/" target="_blank" rel="noopener"
+              <a href="https://www.tempe.gov/" target="_blank"
                 >Tempe</a
               >:</strong
             >
