--- a/locksmith-tempe.html
+++ b/locksmith-tempe.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="/css/styles.min.css" as="style" />
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
@@ -411,10 +412,7 @@
           <h2 class="pt-1">Response Times by Tempe Area</h2>
           <p class="pt-1">
             <strong
-              >How fast we arrive depends on where you are in
-              <a href="https://www.tempe.gov/" target="_blank"
-                >Tempe</a
-              >:</strong
+              >How fast we arrive depends on where you are in Tempe:</strong
             >
           </p>
           <div class="response-times">
@@ -835,6 +833,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/js/navbar.min.js"></script>
+    <script src="/js/navbar.min.js" defer></script>
   </body>
 </html>
