--- a/emergency-locksmith.html
+++ b/emergency-locksmith.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="/css/styles.min.css" as="style" />
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
@@ -1248,6 +1249,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/js/navbar.min.js"></script>
+    <script src="/js/navbar.min.js" defer></script>
   </body>
 </html>
