--- a/locksmith-mesa.html
+++ b/locksmith-mesa.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="/css/styles.min.css" as="style" />
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
@@ -411,9 +412,7 @@
           <h2 class="pt-1">Response Times by Mesa Area</h2>
           <p class="pt-1">
             <strong
-              >How fast we arrive depends on where you are in
-              <a href="https://www.mesaaz.gov/" target="_blank">Mesa</a
-              >:</strong
+              >How fast we arrive depends on where you are in Mesa:</strong
             >
           </p>
           <div class="response-times">
@@ -894,6 +893,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="/js/navbar.min.js"></script>
+    <script src="/js/navbar.min.js" defer></script>
   </body>
 </html>
