--- a/locksmith-mesa.html
+++ b/locksmith-mesa.html
@@ -61,9 +61,10 @@
         "priceRange": "$$",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "7305 W Crown King Rd",
           "addressLocality": "Phoenix",
           "addressRegion": "AZ",
-          "postalCode": "85001",
+          "postalCode": "85043",
           "addressCountry": "US"
         },
         "geo": {
@@ -882,7 +883,7 @@
               <li><a href="/contact">Contact Us</a></li>
               <li><a href="tel:+16027447531">(602) 744-7531</a></li>
               <li>24/7 Service</li>
-              <li>Phoenix, AZ</li>
+              <li>7305 W Crown King Rd, Phoenix, AZ 85043</li>
             </ul>
           </div>
         </div>
