--- a/automotive-locksmith.html
+++ b/automotive-locksmith.html
@@ -416,8 +416,10 @@
         "image": "https://phoenix24hrlocksmith.com/images/locksmith-phoenix-og.png",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "7305 W Crown King Rd",
           "addressLocality": "Phoenix",
           "addressRegion": "AZ",
+          "postalCode": "85043",
           "addressCountry": "US"
         },
         "areaServed": {
@@ -1273,7 +1275,7 @@
               <li><a href="/contact">Contact Us</a></li>
               <li><a href="tel:+16027447531">(602) 744-7531</a></li>
               <li>24/7 Service</li>
-              <li>Phoenix, AZ</li>
+              <li>7305 W Crown King Rd, Phoenix, AZ 85043</li>
             </ul>
           </div>
         </div>
