--- a/car-key-replacement.html
+++ b/car-key-replacement.html
@@ -60,8 +60,10 @@
         "telephone": "+16027447531",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "7305 W Crown King Rd",
           "addressLocality": "Phoenix",
           "addressRegion": "AZ",
+          "postalCode": "85043",
           "addressCountry": "US"
         },
         "areaServed": {
@@ -88,8 +90,10 @@
           "@type": "Place",
           "address": {
             "@type": "PostalAddress",
+            "streetAddress": "7305 W Crown King Rd",
             "addressLocality": "Phoenix",
             "addressRegion": "AZ",
+            "postalCode": "85043",
             "addressCountry": "US"
           }
         },
@@ -1022,7 +1026,7 @@
               <li><a href="/contact">Contact Us</a></li>
               <li><a href="tel:+16027447531">(602) 744-7531</a></li>
               <li>24/7 Service</li>
-              <li>Phoenix, AZ</li>
+              <li>7305 W Crown King Rd, Phoenix, AZ 85043</li>
             </ul>
           </div>
         </div>
